force-app/main/default/objects/vlocity_ins__AssetPricingAdjustment__c/fields/vlocity_ins__Amount__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__Amount__c</fullName>
    <description>Calculated amount of the price list entry on the associated Asset or AssetInsuredItem, AssetCoverage, or AssetPartyRelationship.</description>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>