force-app/main/default/objects/vlocity_ins__AssetPricingAdjustment__c/fields/vlocity_ins__ApplicableItemType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ApplicableItemType__c</fullName>
    <description>Indicates which item is associated with the itemzed price list entry amount.</description>
    <label>Applicable Item Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Coverage</fullName>
            </value>
            <value>
                <fullName>Insured Item</fullName>
            </value>
            <value>
                <fullName>Party Relationship</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>