force-app/main/default/objects/vlocity_ins__AssetPricingAdjustment__c/fields/vlocity_ins__AssetCoverageId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__AssetCoverageId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Coverage associated with the itemized price list entry amount.</description>
    <label>Coverage</label>
    <referenceTo>vlocity_ins__AssetCoverage__c</referenceTo>
    <relationshipLabel>Policy Pricing Adjustments</relationshipLabel>
    <relationshipName>PolicyPricingAdjustments</relationshipName>
    <type>Lookup</type>
</CustomField>