force-app/main/default/objects/vlocity_ins__AssetPricingAdjustment__c/fields/vlocity_ins__AssetInsuredItemId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__AssetInsuredItemId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Insured item associated with the itemized price list entry amount.</description>
    <label>Insured Item</label>
    <referenceTo>vlocity_ins__AssetInsuredItem__c</referenceTo>
    <relationshipLabel>Policy Pricing Adjustments</relationshipLabel>
    <relationshipName>PolicyPricingAdjustments</relationshipName>
    <type>Lookup</type>
</CustomField>