force-app/main/default/objects/vlocity_ins__AssetPricingAdjustment__c/fields/vlocity_ins__EffectiveEndDate__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__EffectiveEndDate__c</fullName>
    <description>DEPRECATED. AssetPricingAdjustment__c is replaced by AccountPriceAdjustment__c.</description>
    <label>Effective End Date</label>
    <type>DateTime</type>
</CustomField>