force-app/main/default/objects/vlocity_ins__AssetPricingAdjustment__c/fields/vlocity_ins__PriceListEntryId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__PriceListEntryId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Price list entry used to calculate the amount.</description>
    <label>Tax/Fee Id</label>
    <referenceTo>vlocity_ins__PriceListEntry__c</referenceTo>
    <relationshipLabel>Policy Pricing Adjustments</relationshipLabel>
    <relationshipName>PolicyPricingAdjustments</relationshipName>
    <type>Lookup</type>
</CustomField>