force-app/main/default/objects/vlocity_ins__AssetPricingAdjustment__c/fields/vlocity_ins__PromotionId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__PromotionId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>DEPRECATED. AssetPricingAdjustment__c is replaced by AccountPriceAdjustment__c.</description>
    <label>Promotion</label>
    <referenceTo>vlocity_ins__Promotion__c</referenceTo>
    <relationshipName>AssetPricingAdjustments</relationshipName>
    <type>Lookup</type>
</CustomField>